--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ var App=typeof App==='undefined'?0:App;
 <!--		<div><a href="//orteil.dashnet.org/randomgen/" target="_blank" id="topbarRandomgen">RandomGen</a></div>
 		<div><a href="//orteil.dashnet.org/igm/" target="_blank" id="topbarIGM">Idle Game Maker</a></div>-->
 <!--		<div><a href="http://Sushi8756.github.io/Cookie-Clicker-Guide/" target="_blank" id="topbarRandomgen">Guide</a></div>-->
-		<div><a class="purplelink" href="https://www.youtube.com/channel/UCP99woj07psKFyMQN56zMdg" target="_blank" id="topbarIGM">Sushi8756</a></div>
-		<div style="position:relative;"><div style="width:26px;height:31px;background:url(img/update.png);position:absolute;left:0px;top:0px;pointer-events:none;"></div><a href="https://github.com/Sushi8756/Cookie-Clicker-2.048" target="_blank" style="padding-left:-3px;" id="topbarRandomgen">█</a></div>
+		<div><a class="purplelink" href="https://instagram.com/DuckiDeluxe" target="_blank" id="topbarIGM">DuckiDeluxe</a></div>
+		<div style="position:relative;"><div style="width:26px;height:31px;background:url(img/update.png);position:absolute;left:0px;top:0px;pointer-events:none;"></div><a href="https://github.com/DuckiDeluxe/DuckiClicker2" target="_blank" style="padding-left:-3px;" id="topbarRandomgen">█</a></div>
 		<div style="float:right;"><a id="changeLanguage" style="font-variant:small-caps;">Change language</a></div>
 		<div id="links" class="hoverer">
 			Other versions
